@@ -1,3 +1,9 @@
+2016-01-06  Barton E. Schaefer  <schaefer@zsh.org>
+
+	* 37513 (cf. Jun T.: 37508): Src/builtin.c: fix typos; improve
+	error cleanup in tempfile case of ASSIGN_MSTREAM(); simplify
+	READ_MSTREAM() and correct for signed/unsigned compiler warning
+
 2016-01-04  Barton E. Schaefer  <schaefer@zsh.org>
 
 	* 37504: Src/builtin.c: refactor code using/simulating memstream
